@startuml
skinparam classAttributeIconSize 0

title Board Game Cafe System Class Diagram

' ==========================================

package "Management Core" {
    class CafeSystem{
        - person : List<Person>
        - cafe_branches : List<CafeBranch>
        - reservations : List<Reservation>

        + add_person(person)
        + add_owner(name)
        + add_manager(name)
        + add_staff(name)
        + add_customer_member(name)
        + add_customer_walk_in()

        + add_cafe_branch(name, location)
        + remove_cafe_branch_by_id(id)

        + add_reservation(reservation)
        + remove_reservation_by_id(id)

        + find_person_by_id(id)
        + find_cafe_branch_by_id(id)
        + find_reservation_by_id(id)

        + add_table_to_branch(branch_id, capacity)
        + get_branch_tables(branch_id)

        + add_board_game_to_branch(...)
        + get_branch_board_games(branch_id)

        + add_menu_to_branch(branch_id)
        + add_menu_item_food_to_branch(...)
        + add_menu_item_drink_to_branch(...)
    }

    class CafeBranch{
        - branch_id : str
        - name : str
        - location : str
        - tables : List<Table>
        - board_games : List<BoardGame>
        - menu_list : MenuList
        - staff_id : List[str]
        - manager_id : str
        - owner_id : str
        - play_sessions : List<PlaySession>

        + add_table(capacity)
        + get_tables()
        + get_table_by_id(id)

        + add_board_game(...)
        + get_board_games()
        + get_board_game_by_id(id)

        + add_menu(menu)

        + add_menu_item_food(...)
        + add_menu_item_drink(...)

        + get_menu()
        + get_menu_items()

        + add_staff(staff)
        + add_staff_by_id(id)
        + remove_staff_by_id(id)

        + add_manager(manager)
        + add_manager_by_id(id)
        + remove_manager()

        + add_owner(owner)
        + add_owner_by_id(id)
        + remove_owner()

        + add_play_session(session)
        + get_play_session_by_id(id)
        + remove_play_session_by_id(id)
}


    enum TableStatus {
        AVAILABLE
        OCCUPIED
        MAINTENANCE
    }
    class Table{
        - table_id : str
        - capacity : int
        - status : TableStatus

        + table_id
        + capacity
        + status
        }

}

package "Person & Auth" {
    abstract class Person {
        - user_id : str
        - name : str
    }

    class Manager {
        - managed_branch : CafeBranch
    }

    class NonCustomer {
        - phone : str
        - email : str
        - hire_date : date
        - salary : float
    }
    
    class Owner {
        - branch_owned : List[CafeBranch]
    }
    
    class Staff {
        - shift_start_time : time
        - shift_end_time : time
        - assigned_branch : CafeBranch
        - overtime_hours : float
        - performance_score : float
        - is_on_duty : bool
    }

    class Customer {
        - total_spent : float
        - birthdate : date
        - member_tier : str
        - is_student : bool             
        
        + get_discount(): float
    }
}

package "Inventory & Menu" {

    enum OrderStatus {
        PENDING
        SERVED
        CANCELLED
    }

    enum BoardGameStatus {
        AVAILABLE
        IN-USE
        MAINTENANCE
        UNAVAILABLE
    } 

    class Order {
        - order_id : str
        - items : List<MenuItem>
        - menu_items : menuitem
        - status = status
    }

    class MenuList {
        - menu_items : List<MenuItem>
        + item_menu_add()
        + item_menu_remove()
    }

    abstract class MenuItem {
        - item_id : str
        - name : str
        - price : float
        - description : str
        - is_available : bool    
        
        + price : float
        + availability : str
        + description : str
    }

    class Food {
        - temp_id : str
    }

    class Drink {
        - temp_id : str
        - cup_size : int
    }

class BoardGame{
- board_game_id : str
- name : str
- genre : str
- price : float
- status : BoardGameStatus
- min_players : int
- max_players : int
- description : str


}
}

package "Operations (Order & Resv)" {
    class Reservation {
        - reservation_id : str
        - customer_id : int
        - date : date
        - start_time : time
        - end_time : time
        - play_table : PlayTable
        - branch : BoardGameCafeBranch
        - status : str
        
        + update_status(new_status : str) : void

    }
    enum ReservationStatus {
        PENDING
        CONFIRMED
        CANCELLED
        NO-SHOW
    }

    enum TransactionStatus {
        ACTIVE
        COMPLETED
        VOIDED
    }

    class Payment {
        - payment_id : str
        - amount : float
        - payment_method : PaymentMethod   
        - payment_time : datetime    
        + process_payment()
    }

    abstract class PaymentMethod {
        - method_id : str

    }

    class Cash {
        + validate_method() : bool
    }
    class Card {
        - card_number : card_number
        - expiry_date : date
        - cvv : cvv
        + validate_method() : bool
    }
    class OnlinePayment {
        - account_email : str
        + validate_method() : bool
    }

    interface PaymentGateway <<External API>> {
        + verify_transaction(amount : float, method_details : str) : bool
        + refund_transaction(transaction_id : str) : bool
    }

    class PlaySession{
        - session_id : str
        - table_id : str
        - start_time : datetime
        - end_time : datetime
        - current_players_id : List[str]
        - current_board_games_id : List[str]
        - current_order : List
        - payment : Payment

        + session_id
        + table_id
        + start_time
        + end_time
        + current_players_id
        + current_board_games_id
        + current_order
        + payment

}

' ==========================================

' --- Inheritance ---
Person <|-- NonCustomer
NonCustomer <|-- Manager
NonCustomer <|-- Staff
NonCustomer <|-- Owner
Person <|-- Customer

MenuItem <|-- Food
MenuItem <|-- Drink

PaymentMethod <|-- Cash
PaymentMethod <|-- Card
PaymentMethod <|-- OnlinePayment
CafeBranch *-- PlaySession
' --- Composition ---
CafeSystem "1" *--> "*" CafeBranch
CafeSystem "1" *--> "*" Person
CafeSystem "1" *--> "*" Order
CafeSystem "1" *--> "*" Reservation
CafeSystem "1" *--> "*" PlaySession
CafeBranch "1" *--> "*" BoardGame
CafeBranch "1" *--> "*" Table
CafeBranch "1" *--> "1" MenuList

' --- Aggregation ---
MenuList "1" o--> "*" MenuItem
Table "1" o--> "*" Order
PlaySession "1" o--> "*" Order

' --- Association ---
Table "1" --> "0..*" Customer
Table "1" --> "0..*" BoardGame
Reservation "1" --> "1" Customer
Reservation "1" --> "1" Table
Reservation "1" --> "1" CafeBranch

Payment "1" --> "1" PaymentMethod
Order "1" --> "*" MenuItem

' --- PlaySession Associations ---
PlaySession "1" --> "0..1" Reservation
PlaySession "1" --> "1" Table
PlaySession "1" --> "1" Customer
PlaySession "1" --> "0..*" Payment
PlaySession "1" --> "0..*" BoardGame

' --- External Associations ---
Card "1" --> "1" PaymentGateway : <<uses>>
OnlinePayment "1" --> "1" PaymentGateway : <<uses>>

@enduml
